Minor fix to thumbnails in case studies on mobile

--- a/caseStudies.css
+++ b/caseStudies.css
@@ -359,6 +359,10 @@ header ul li ul li:hover a {
     justify-content: center;
 }
 
+.case-studies-card img {
+    max-width: 100%;
+}
+
 .content {
     padding-top: 40px;
     text-align: left;
